fixed navbar on mobile homepage

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header .logo  {
 .navigation-menu a {
     text-decoration: none;
     color: var(--seasalt);
-    padding: 0.2rem;
+    margin: .5rem;
     font-size: 100%;
     text-align: center;
 }
